Version 1.4.8

 * Added generic type detection, to avoid a case where types with the same generic type but with deferent parameters were treated the same
 * Added nested types detection, to avoid a case were types foo.Bar and Bar are treated the same

Version 1.4.7

 * Added support for producing signed assmeblies when the proxied type is signed (solve some problems with proxies for strongly named internal classes on .Net 2.0).
   Usage is: [assembly: InternalsVisibleTo("DynamicAssemblyProxyGen, PublicKey=0024000004800000940000000602000000240000525341310004000001000100fb4ff5a7c8bba6feb6a6b75b260cd57c1b8b85b63a45dedcb7081331740c870852af30abd2a74700cce1d7a01aeed019339db202e010ac808396b2922362877c6afc8993281092434a223b9920cac8ba409d138a97b73cd1baad813af450b886e3d7f5a09ee450d415145eb0524778a6bd1ae733fd2b6ceebfd151620534bcb7")]
Version 1.4.6

 * Fixed a problem with overloaded indexed properties
 * Added ability to handle internal classes using .Net 2 InternalsVisibleTo
 * Removed trace warning when method is not found on object.
 * Applied patch from Jeff Brown <Jeff@ingenio.com> to support ref and out params.

Version 1.0.6
- Applied patch from Corneliu I. Tusnea

Version 1.0.5
- Fix sbyte enums

Version 1.0.4
- Added the property MethodInvocationTarget to the IInvocation interface.
  This property represents the methods being invoked on the target object. This
  is important when proxying interfaces and still you want to obtain attributes
  from the method on the concrete class.

Version 1.0.3
- Applied patch from Sergey Koshcheyev related to proxy desserialization problems

Version 1.0.2
- Support for constructor arguments
- Lock implemented on the obtention of the invocation objects (also multithread test case added)
- Applied patch from Mark Traudt to make SimpleAST support the creation of events

Version 1.0.0
- First release





